update the notebook

--- a/Building Neural Networks from Scratch.ipynb
+++ b/Building Neural Networks from Scratch.ipynb
@@ -256,15 +256,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QR0b4Ft23iUQ"
-      },
-      "source": [
-        "![Screenshot 2024-05-16 at 12.21.35 PM.png](attachment:15dc20d7-a498-4291-a8d1-546adb19f1df.png)"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -306,15 +297,6 @@
         "<div class=\"alert alert-block alert-warning\">\n",
         "LAYER OF NEURONS USING NUMPY\n",
         "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ox-l6RnN3iUR"
-      },
-      "source": [
-        "![Screenshot 2024-05-16 at 12.28.51 PM.png](attachment:1baffeb8-236f-4476-a62a-2faf2ef006af.png)"
       ]
     },
     {
@@ -377,30 +359,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dIB-HfxC3iUS"
-      },
-      "source": [
-        "![Screenshot 2024-05-16 at 12.40.55 PM.png](attachment:a823d9f6-e42c-451f-adee-be153cc12000.png)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zu7sIeO03iUS"
       },
       "source": [
         "<div class=\"alert alert-block alert-danger\">\n",
         "\n",
         "NEED TO TAKE TRANSPOSE OF WEIGHT MATRIX</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wEL4EyiM3iUS"
-      },
-      "source": [
-        "![Screenshot 2024-05-16 at 12.41.11 PM.png](attachment:45a2d43b-5bdc-4752-8e55-9a60c2e459ca.png)"
       ]
     },
     {
@@ -640,8 +604,7 @@
         "\n",
         "\n",
         "# Let's see output of the first few samples:\n",
-        "print(dense1.output[:5])\n",
-        ""
+        "print(dense1.output[:5])\n"
       ]
     },
     {
@@ -1926,15 +1889,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_6INJTxm3iUn"
-      },
-      "source": [
-        "![Screenshot 2024-06-04 at 8.39.55 AM.png](attachment:2ce30e57-6373-4b3a-83c7-1195faf70521.png)"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1983,15 +1937,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Shbo40723iUn"
-      },
-      "source": [
-        "![Screenshot 2024-06-04 at 8.40.32 AM.png](attachment:6bc97cfa-5ef2-48e8-a092-543ab5661b0e.png)"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2034,15 +1979,6 @@
         "<div class=\"alert alert-block alert-warning\">\n",
         "GRADIENTS OF THE LOSS WITH RESPECT TO INPUTS\n",
         "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3PnjW_Em3iUo"
-      },
-      "source": [
-        "![Screenshot 2024-06-04 at 8.41.02 AM.png](attachment:80f310e2-857a-4147-87fa-96e60bbce229.png)"
       ]
     },
     {
@@ -4490,6 +4426,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -4506,9 +4445,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.2"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
